--- a/BC_client/css/login.css
+++ b/BC_client/css/login.css
@@ -185,12 +185,12 @@ iframe {
   justify-content: center;
   align-items: center;
   padding: 15px;
-  background: #f2f2f2;
+  background: #191919;
 }
 
 .wrap-login100 {
   width: 1170px;
-  background: #fff;
+  background: #191919;
   overflow: hidden;
   display: -webkit-box;
   display: -webkit-flex;
