fix image route

--- a/BC_client/views/about-us.html
+++ b/BC_client/views/about-us.html
@@ -323,12 +323,12 @@
                     <div class="footer-widget">
                         <h5>Instagram</h5>
                         <div class="insta-pic">
-                            <img src="images/instagram/instagram-1.jpg" alt="">
-                            <img src="images/instagram/instagram-2.jpg" alt="">
-                            <img src="images/instagram/instagram-3.jpg" alt="">
-                            <img src="images/instagram/instagram-4.jpg" alt="">
-                            <img src="images/instagram/instagram-5.jpg" alt="">
-                            <img src="images/instagram/instagram-6.jpg" alt="">
+                            <img src="../images/instagram/instagram-1.jpg" alt="">
+                            <img src="../images/instagram/instagram-2.jpg" alt="">
+                            <img src="../images/instagram/instagram-3.jpg" alt="">
+                            <img src="../images/instagram/instagram-4.jpg" alt="">
+                            <img src="../images/instagram/instagram-5.jpg" alt="">
+                            <img src="../images/instagram/instagram-6.jpg" alt="">
                         </div>
                     </div>
                 </div>
