--- a/BC_client/views/blog-details.html
+++ b/BC_client/views/blog-details.html
@@ -36,7 +36,7 @@
                 <div class="col-lg-2 col-md-2">
                     <div class="logo">
                         <a href="#">
-                            <img src="images/logo.png" alt="">
+                            <img src="../images/logo.png" alt="">
                         </a>
                     </div>
                 </div>
@@ -104,10 +104,10 @@
                         <div class="bd-pic">
                             <div class="row">
                                 <div class="col-md-6">
-                                    <img src="images/blog/details/bd-more-1.jpg" alt="">
+                                    <img src="../images/blog/details/bd-more-1.jpg" alt="">
                                 </div>
                                 <div class="col-md-6">
-                                    <img src="images/blog/details/bd-more-2.jpg" alt="">
+                                    <img src="../images/blog/details/bd-more-2.jpg" alt="">
                                 </div>
                             </div>
                         </div>
@@ -131,7 +131,7 @@
                             </div>
                         </div>
                         <div class="bd-quote">
-                            <img src="images/blog/details/quote.png" alt="">
+                            <img src="../images/blog/details/quote.png" alt="">
                             <p>We need to stop interrupting what people are interested in and be what people are
                                 interested in.”</p>
                             <div class="quote-author">
@@ -164,7 +164,7 @@
                             </div>
                         </div>
                         <div class="blog-author">
-                            <img src="images/blog/details/bd-posted.jpg" alt="">
+                            <img src="../images/blog/details/bd-posted.jpg" alt="">
                             <h5>Shane Lynch</h5>
                             <p>Aliquip ex ea commodo consequat. Duis aute irure dolor in<br /> reprehenderit in
                                 voluptate velit esse cillum bore et dolore magna aliqua. </p>
@@ -226,7 +226,7 @@
                                     <p>Never ever think of giving up. Winners never quit and</p>
                                     <div class="bt-author">
                                         <div class="ba-pic">
-                                            <img src="images/blog/author-1.jpg" alt="">
+                                            <img src="../images/blog/author-1.jpg" alt="">
                                         </div>
                                         <div class="ba-text">
                                             <h5>Jeff Rodriguez</h5>
@@ -254,7 +254,7 @@
                                     <p>Never ever think of giving up. Winners never quit and</p>
                                     <div class="bt-author">
                                         <div class="ba-pic">
-                                            <img src="images/blog/author-1.jpg" alt="">
+                                            <img src="../images/blog/author-1.jpg" alt="">
                                         </div>
                                         <div class="ba-text">
                                             <h5>Aaron Russell</h5>
@@ -279,7 +279,7 @@
                     <div class="footer-option">
                         <div class="fo-logo">
                             <a href="#">
-                                <img src="images/logo.png" alt="">
+                                <img src="../images/logo.png" alt="">
                             </a>
                         </div>
                         <ul>
@@ -320,12 +320,12 @@
                     <div class="footer-widget">
                         <h5>Instagram</h5>
                         <div class="insta-pic">
-                            <img src="images/instagram/instagram-1.jpg" alt="">
-                            <img src="images/instagram/instagram-2.jpg" alt="">
-                            <img src="images/instagram/instagram-3.jpg" alt="">
-                            <img src="images/instagram/instagram-4.jpg" alt="">
-                            <img src="images/instagram/instagram-5.jpg" alt="">
-                            <img src="images/instagram/instagram-6.jpg" alt="">
+                            <img src="../images/instagram/instagram-1.jpg" alt="">
+                            <img src="../images/instagram/instagram-2.jpg" alt="">
+                            <img src="../images/instagram/instagram-3.jpg" alt="">
+                            <img src="../images/instagram/instagram-4.jpg" alt="">
+                            <img src="../images/instagram/instagram-5.jpg" alt="">
+                            <img src="../images/instagram/instagram-6.jpg" alt="">
                         </div>
                     </div>
                 </div>
