--- a/BC_client/views/blog.html
+++ b/BC_client/views/blog.html
@@ -36,7 +36,7 @@
                 <div class="col-lg-2 col-md-2">
                     <div class="logo">
                         <a href="#">
-                            <img src="images/logo.png" alt="">
+                            <img src="../images/logo.png" alt="">
                         </a>
                     </div>
                 </div>
@@ -105,7 +105,7 @@
                                     <p>Never ever think of giving up. Winners never quit and</p>
                                     <div class="bt-author">
                                         <div class="ba-pic">
-                                            <img src="images/blog/author-1.jpg" alt="">
+                                            <img src="../images/blog/author-1.jpg" alt="">
                                         </div>
                                         <div class="ba-text">
                                             <h5>Jeff Rodriguez</h5>
@@ -133,7 +133,7 @@
                                     <p>Never ever think of giving up. Winners never quit and</p>
                                     <div class="bt-author">
                                         <div class="ba-pic">
-                                            <img src="images/blog/author-1.jpg" alt="">
+                                            <img src="../images/blog/author-1.jpg" alt="">
                                         </div>
                                         <div class="ba-text">
                                             <h5>Aaron Russell</h5>
@@ -157,7 +157,7 @@
                                 incididunt ut labore et sed do eiusmod tempor incididunt ut labore </p>
                             <div class="bt-author">
                                 <div class="ba-pic">
-                                    <img src="images/blog/author-1.jpg" alt="">
+                                    <img src="../images/blog/author-1.jpg" alt="">
                                 </div>
                                 <div class="ba-text">
                                     <h5>Jeff Rodriguez</h5>
@@ -183,7 +183,7 @@
                                     <p>Never ever think of giving up. Winners never quit and</p>
                                     <div class="bt-author">
                                         <div class="ba-pic">
-                                            <img src="images/blog/author-2.jpg" alt="">
+                                            <img src="../images/blog/author-2.jpg" alt="">
                                         </div>
                                         <div class="ba-text">
                                             <h5>Aaron Russell</h5>
@@ -239,7 +239,7 @@
                                     <p>Never ever think of giving up. Winners never quit and</p>
                                     <div class="bt-author">
                                         <div class="ba-pic">
-                                            <img src="images/blog/author-2.jpg" alt="">
+                                            <img src="../images/blog/author-2.jpg" alt="">
                                         </div>
                                         <div class="ba-text">
                                             <h5>Aaron Russell</h5>
@@ -271,7 +271,7 @@
                     <div class="footer-option">
                         <div class="fo-logo">
                             <a href="#">
-                                <img src="images/logo.png" alt="">
+                                <img src="../images/logo.png" alt="">
                             </a>
                         </div>
                         <ul>
@@ -312,12 +312,12 @@
                     <div class="footer-widget">
                         <h5>Instagram</h5>
                         <div class="insta-pic">
-                            <img src="images/instagram/instagram-1.jpg" alt="">
-                            <img src="images/instagram/instagram-2.jpg" alt="">
-                            <img src="images/instagram/instagram-3.jpg" alt="">
-                            <img src="images/instagram/instagram-4.jpg" alt="">
-                            <img src="images/instagram/instagram-5.jpg" alt="">
-                            <img src="images/instagram/instagram-6.jpg" alt="">
+                            <img src="../images/instagram/instagram-1.jpg" alt="">
+                            <img src="../images/instagram/instagram-2.jpg" alt="">
+                            <img src="../images/instagram/instagram-3.jpg" alt="">
+                            <img src="../images/instagram/instagram-4.jpg" alt="">
+                            <img src="../images/instagram/instagram-5.jpg" alt="">
+                            <img src="../images/instagram/instagram-6.jpg" alt="">
                         </div>
                     </div>
                 </div>
