--- a/BC_client/views/contact.html
+++ b/BC_client/views/contact.html
@@ -36,7 +36,7 @@
                 <div class="col-lg-2 col-md-2">
                     <div class="logo">
                         <a href="#">
-                            <img src="images/logo.png" alt="">
+                            <img src="../images/logo.png" alt="">
                         </a>
                     </div>
                 </div>
@@ -153,7 +153,7 @@
                     <div class="footer-option">
                         <div class="fo-logo">
                             <a href="#">
-                                <img src="images/logo.png" alt="">
+                                <img src="../images/logo.png" alt="">
                             </a>
                         </div>
                         <ul>
@@ -194,12 +194,12 @@
                     <div class="footer-widget">
                         <h5>Instagram</h5>
                         <div class="insta-pic">
-                            <img src="images/instagram/instagram-1.jpg" alt="">
-                            <img src="images/instagram/instagram-2.jpg" alt="">
-                            <img src="images/instagram/instagram-3.jpg" alt="">
-                            <img src="images/instagram/instagram-4.jpg" alt="">
-                            <img src="images/instagram/instagram-5.jpg" alt="">
-                            <img src="images/instagram/instagram-6.jpg" alt="">
+                            <img src="../images/instagram/instagram-1.jpg" alt="">
+                            <img src="../images/instagram/instagram-2.jpg" alt="">
+                            <img src="../images/instagram/instagram-3.jpg" alt="">
+                            <img src="../images/instagram/instagram-4.jpg" alt="">
+                            <img src="../images/instagram/instagram-5.jpg" alt="">
+                            <img src="../images/instagram/instagram-6.jpg" alt="">
                         </div>
                     </div>
                 </div>
