--- a/BC_client/views/items.html
+++ b/BC_client/views/items.html
@@ -36,7 +36,7 @@
                 <div class="col-lg-2 col-md-2">
                     <div class="logo">
                         <a href="#">
-                            <img src="images/logo.png" alt="">
+                            <img src="../images/logo.png" alt="">
                         </a>
                     </div>
                 </div>
@@ -104,29 +104,29 @@
             <div class="row gallery-filter">
                 <div class="col-lg-6 mix all fashion">
                     <div class="gs-item">
-                        <img src="images/gallery/gallery-1.jpg" alt="">
+                        <img src="../images/gallery/gallery-1.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="row">
                         <div class="col-lg-6 mix all model">
                             <div class="gs-item">
-                                <img src="images/gallery/gallery-2.jpg" alt="">
+                                <img src="../images/gallery/gallery-2.jpg" alt="">
                             </div>
                         </div>
                         <div class="col-lg-6 mix all event">
                             <div class="gs-item">
-                                <img src="images/gallery/gallery-3.jpg" alt="">
+                                <img src="../images/gallery/gallery-3.jpg" alt="">
                             </div>
                         </div>
                         <div class="col-lg-6 mix all other">
                             <div class="gs-item">
-                                <img src="images/gallery/gallery-4.jpg" alt="">
+                                <img src="../images/gallery/gallery-4.jpg" alt="">
                             </div>
                         </div>
                         <div class="col-lg-6 mix all fashion">
                             <div class="gs-item">
-                                <img src="images/gallery/gallery-5.jpg" alt="">
+                                <img src="../images/gallery/gallery-5.jpg" alt="">
                             </div>
                         </div>
                     </div>
@@ -135,19 +135,19 @@
                     <div class="row">
                         <div class="col-lg-6 mix all event">
                             <div class="gs-item">
-                                <img src="images/gallery/gallery-6.jpg" alt="">
+                                <img src="../images/gallery/gallery-6.jpg" alt="">
                             </div>
                         </div>
                         <div class="col-lg-6 mix all model other">
                             <div class="gs-item">
-                                <img src="images/gallery/gallery-7.jpg" alt="">
+                                <img src="../images/gallery/gallery-7.jpg" alt="">
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6 mix all fashion event">
                     <div class="gs-item">
-                        <img src="images/gallery/gallery-8.jpg" alt="">
+                        <img src="../images/gallery/gallery-8.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -163,7 +163,7 @@
                     <div class="footer-option">
                         <div class="fo-logo">
                             <a href="#">
-                                <img src="images/logo.png" alt="">
+                                <img src="../images/logo.png" alt="">
                             </a>
                         </div>
                         <ul>
@@ -204,12 +204,12 @@
                     <div class="footer-widget">
                         <h5>Instagram</h5>
                         <div class="insta-pic">
-                            <img src="images/instagram/instagram-1.jpg" alt="">
-                            <img src="images/instagram/instagram-2.jpg" alt="">
-                            <img src="images/instagram/instagram-3.jpg" alt="">
-                            <img src="images/instagram/instagram-4.jpg" alt="">
-                            <img src="images/instagram/instagram-5.jpg" alt="">
-                            <img src="images/instagram/instagram-6.jpg" alt="">
+                            <img src="../images/instagram/instagram-1.jpg" alt="">
+                            <img src="../images/instagram/instagram-2.jpg" alt="">
+                            <img src="../images/instagram/instagram-3.jpg" alt="">
+                            <img src="../images/instagram/instagram-4.jpg" alt="">
+                            <img src="../images/instagram/instagram-5.jpg" alt="">
+                            <img src="../images/instagram/instagram-6.jpg" alt="">
                         </div>
                     </div>
                 </div>
