--- a/BC_client/views/about-us.html
+++ b/BC_client/views/about-us.html
@@ -53,8 +53,9 @@
                                     <li><a href="#">Gomez</a></li>
                                 </ul>
                             </li>
-                            <li><a href="./login">Login/SignUp</a></li>
-                            <li><a href="./blog">Login/SignUp</a></li>
+                            <li><a href="/login">Login</a></li>
+                            <li><a href="/signup">SignUp</a></li>
+                            <li><a href="/blog">Blog</li>
                             <li><a href="./contact">Contact</a></li>
                         </ul>
                     </div>
