--- a/BC_client/views/login.html
+++ b/BC_client/views/login.html
@@ -55,8 +55,9 @@
                                     <li><a href="#">Gomez</a></li>
                                 </ul>
                             </li>
-                            <li class="active"><a href="./login">Login/SignUp</a></li>
-                            <li><a href="./blog">Login/SignUp</a></li>
+                            <li class="active"><a href="/login">Login</a></li>
+                            <li><a href="/signup">SignUp</a></li>
+                            <li><a href="/blog">Blog</li>
                             <li><a href="./contact">Contact</a></li>
                         </ul>
                     </div>
@@ -116,14 +117,14 @@
 	<div id="dropDownSelect1"></div>
 	
 <!--===============================================================================================-->
-	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
+	<script src="../vendor/jquery/jquery-3.2.1.min.js"></script>
 <!--===============================================================================================-->
-	<script src="vendor/animsition/js/animsition.min.js"></script>
+	<script src="../vendor/animsition/js/animsition.min.js"></script>
 <!--===============================================================================================-->
-	<script src="vendor/bootstrap/js/popper.js"></script>
-	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+	<script src="../vendor/bootstrap/js/popper.js"></script>
+	<script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
 <!--===============================================================================================-->
-	<script src="vendor/select2/select2.min.js"></script>
+	<script src="../vendor/select2/select2.min.js"></script>
 	<script>
 		$(".selection-2").select2({
 			minimumResultsForSearch: 20,
@@ -131,12 +132,12 @@
 		});
 	</script>
 <!--===============================================================================================-->
-	<script src="vendor/daterangepicker/moment.min.js"></script>
-	<script src="vendor/daterangepicker/daterangepicker.js"></script>
+	<script src="../vendor/daterangepicker/moment.min.js"></script>
+	<script src="../vendor/daterangepicker/daterangepicker.js"></script>
 <!--===============================================================================================-->
-	<script src="vendor/countdowntime/countdowntime.js"></script>
+	<script src="../vendor/countdowntime/countdowntime.js"></script>
 <!--===============================================================================================-->
-	<script src="js/login.js"></script>
+	<script src="../js/login.js"></script>
 
 </body>
 </html>
