--- a/BC_client/views/index.html
+++ b/BC_client/views/index.html
@@ -21,6 +21,8 @@
     <link rel="stylesheet" href="../css/magnific-popup.css" type="text/css">
     <link rel="stylesheet" href="../css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="../css/style.css" type="text/css">
+
+
 </head>
 
 <body style = "background-color: rgb(201, 76, 76);">
@@ -54,8 +56,10 @@
                                     <li><a href="#">Gomez</a></li>
                                 </ul>
                             </li>
-                            <li><a href="/login">Login/SignUp</a></li>
-                            <li><a href="/blog">Login/SignUp</a></li>
+                            <li><a href="/login">Login</a></li>
+                            <li><a href="/signup">SignUp</a></li>
+                            <li><a href="/blog">Blog</li>
+
                             <li><a href="/contact">Contact</a></li>
                         </ul>
                     </div>
@@ -546,9 +550,9 @@
     <script src="../js/jquery-3.3.1.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/jquery.magnific-popup.min.js"></script>
-    <script src="../js/mixitup.min.js"></script>
+   <script src="../js/mixitup.min.js"></script>
     <script src="../js/jquery.slicknav.js"></script>
-    <script src="../js/owl.carousel.min.js"></script>
+    <script src="../js/owl.carousel.min.js"></script> 
     <script src="../js/main.js"></script>
     <!-- <script src="../../BC_server/server.js"></script> -->
 </body>
